--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Tweets#index</h1>
-<p>Find me in app/views/tweets/index.html.erb</p>
+<div class="mb-8">
+  <%= render 'form' %>
+</div>
+
+<%= turbo_frame_tag "tweets" do %>
+  <%= render @tweets %>
+<% end %>
