--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
 
 <nav class="flex flex-wrap items-center justify-between py-3 text-gray-700 bg-white container mx-auto lg:px-0 px-4 <%= nav_classes %>" data-controller="nav">
   <div class="flex items-center mr-6 flex-no-shrink">
-     <%= link_to root_path, class:"link text-xl tracking-tight font-black" do %>
-      <span class="sr-only">Add your app name here</span>
+    <%= link_to root_path, class:"link text-xl tracking-tight font-black" do %>
+      <span class="sr-only">Tweeter</span>
       <%# Remove this logo and add your own %>
       <svg fill="none" class="w-9 h-9" height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><linearGradient id="a" gradientUnits="userSpaceOnUse" x1="56" x2="463" y1="46" y2="465"><stop offset="0" stop-color="#8038ed"/><stop offset="1" stop-color="#3a0092"/></linearGradient><path d="m0 0h512v512h-512z" fill="#fff"/><rect fill="url(#a)" height="512" rx="110" width="512"/><g stroke="#fff"><circle cx="190" cy="302" r="79.5" stroke-opacity=".9" stroke-width="25"/><circle cx="254" cy="377" r="34" stroke-opacity=".8" stroke-width="10"/><circle cx="282" cy="227" r="106" stroke-width="50"/></g></svg>
     <% end %>
