rendering localized errors for tweets

--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,11 +1,9 @@
 <%= form_with model: @tweet, data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" } do |form| %>
-  <% if form.object.errors.any? %>
+  <% if flash[:tweet_errors] %>
     <div class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3 mx-3">
-      <h2><%= pluralize(form.object.errors.count, "error") %> prophibited this Tweet from being saved:</h2>
-
       <ul>
-        <% form.object.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <% flash[:tweet_errors].each do |error| %>
+          <li><%= error %></li>
         <% end %>
       </ul>
     </div>
