--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,6 +2,6 @@
   <%= render 'form' %>
 </div>
 
-<%= turbo_frame_tag "tweets" do %>
+<%= turbo_frame_tag "tweets", class: "divide-y" do %>
   <%= render @tweets %>
 <% end %>
